--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:wght@400;700&display=swap");
+
+:root {
+  --primary: #42567a;
+  --primary-transparent: rgba(66, 86, 122, 0.1);
+  --white: #ffffff;
+  --blue: #3877ee;
+  --fuchia: #ef5da8;
+  --iris: #5d5fef;
+
+  --font-bebas: "Bebas Neue", sans-serif;
+  --font-pt: "PT Sans", sans-serif;
+  --fs-sm: 14px;
+  --fs-md: 20px;
+  --fs-l: 56px;
+  --fw-normal: 400;
+  --fw-bold: 700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-pt);
+  font-weight: var(--fw-normal);
+  color: var(--primary);
+}
+
+#root {
+  min-height: 100vh;
 }
